--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>My Magazine</title>
+    <style>
+      body{
+        -ms-overflow-style: none; 
+      }
+      ::-webkit-scrollbar {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
